@@ -1,4 +1,4 @@
 EBUILD qutim-0.2.9999.ebuild 3593 RMD160 66e2782b4b0da5113de225e789822ceeaddb7675 SHA1 17c8e5111206059d216b4317bc715ffd4a804b33 SHA256 3df6b6d86b22c44583d680c73c19dfe960acaae72a0ab5f42bc234e41e34e3fe
-EBUILD qutim-0.3.9999.ebuild 4633 RMD160 ec46a012aba591f53680213c05dbc437d1f3ef23 SHA1 99d61872d33b2f5268d2d1f35f56f86fde641c91 SHA256 1cbda0da289c678388f2368c849f74b254ba7b669bbad17e16d74fd8fd0b7f70
+EBUILD qutim-0.3.9999.ebuild 4726 RMD160 6d34a525f9166d93775c14be3c5e78b2b3c961d7 SHA1 c194217ead10e5157dffe91fbede294e1c0eb2be SHA256 a19142c2779665468a2c22723298e64062736f899f182c25c79655f206eda947
 MISC ChangeLog 499 RMD160 37f2330fd91dbfefaa6e60633a11e81c0af7c492 SHA1 62773aae54276fae2b8e64ffd2356fa40a6fde74 SHA256 293b91a169bc4a40df4281f8cef3dca07b9209024d96a665bd160d5628e2429d
 MISC metadata.xml 825 RMD160 58170622b93ab4288d519750e29a3b78c9e4d72b SHA1 47d9262307a0d3caf1cc55c437e97e8012a5d128 SHA256 9036abf0ea9c9fa0e64765932b9d13b32f09e768086bfd4abc40072207fdde0a
