@@ -1,0 +1,3 @@
+EBUILD qutim-clconf-0.3.9999.ebuild 975 RMD160 929ccc6659930a871adfb66c9c7f08b390dc3997 SHA1 060dc7734ec305f061bf9217513f292b1c07bebb SHA256 83f1d6d75b6967438709fe60c0af1ff6af6ef27e1e3c4915076faa7ad7d48ddc
+MISC ChangeLog 282 RMD160 d6bfbdeebdab2882492050c8e60c39e36ec41150 SHA1 462fd5ee390b016dd48704ccc447529e1c46328d SHA256 163717a333472f19a3d169cd5c74979af141ee98bed8d8a73a00fcff8774f53d
+MISC metadata.xml 242 RMD160 9c5b910c7c12c8a1ed8bd87a7ad0b9bcfc4733d4 SHA1 4c37aa691790a1b3c6ce27b54062f88f3243b1b7 SHA256 5cfd8583ff311843d5530c5a3d10fbe6c87b58b100697e505b3ac1838059755a
