@@ -1,3 +1,4 @@
 EBUILD qutim-mrim-0.2.9999.ebuild 1025 RMD160 f7a924c14fa9d6660d7a8982fdb2e40a96c5be77 SHA1 5393f6f1da219ac8e4aa4e0bc1a172f34d9a482c SHA256 0422408cb84ac2e10af515056604c38b2b37c20bc3d2a4c629773b54c1827b09
-MISC ChangeLog 274 RMD160 06f98de16f39e6cafc3bf2d75f02c12ffa946624 SHA1 7ec3265d2925b9b1e78ae5dc097ec5f04223b620 SHA256 c1a9383dcccc2ecfa0c4b74b76e4c37ec7e830c67cde1eec47785927525b3fc5
+EBUILD qutim-mrim-0.3.9999.ebuild 1034 RMD160 8bbe2492123b247f6ab8b21f05a1c401b771f6aa SHA1 1322042f34db42cb789a026e269bb23ec139951f SHA256 542c4e74d960e0a01450625ea3ab93e52291fb7e9e81fd75814973b941f48356
+MISC ChangeLog 434 RMD160 c359f7c5f9913ee26d1ca82673455cde5a296d9f SHA1 0ada26b61af87638a30c60917c1df5c9caf093c3 SHA256 9ddb989cef4e7460105a1b179865cc47c260109af1828bfb2b9a09f32e420dd0
 MISC metadata.xml 242 RMD160 9c5b910c7c12c8a1ed8bd87a7ad0b9bcfc4733d4 SHA1 4c37aa691790a1b3c6ce27b54062f88f3243b1b7 SHA256 5cfd8583ff311843d5530c5a3d10fbe6c87b58b100697e505b3ac1838059755a
