@@ -2,6 +2,12 @@
 # Copyright 1999-2010 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*qutim-mrim-0.3.9999 (07 Aug 2010)
+
+  07 Aug 2010; Viktor Lazarev <taurus101v@gmail.com>
+  +qutim-mrim-0.3.9999.ebuild:
+  Added ebuild for new version of MRIM
+
   18 May 2010; Viktor Lazarev <taurus101v@gmail.com>
   qutim-mrim-0.2.9999.ebuild, +metadata.xml:
   repoman payment, added ChangeLog and metadata.xml
